<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.itca.androidhangman.activities.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:orientation="horizontal" 
        android:layout_marginBottom="2dp">

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score:"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/dynScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:paddingRight="1dp"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.55"
        android:orientation="horizontal" >

        <net.itca.androidhangman.core.DrawingPanel
            android:id="@+id/drawingpanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="2dp" >
		</net.itca.androidhangman.core.DrawingPanel>
    </LinearLayout>


    
    
    
    
    <RelativeLayout
        android:id="@+id/wordfield"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >
        
        
        <TextView
            android:id="@+id/uncoveredword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onStart"
            android:text="@string/press_start"
            android:textSize="40sp" 
            android:layout_centerHorizontal="true"/>
        
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/dynbuttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
       
    </RelativeLayout>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:onClick="onStart"
            android:text="@string/startbutton"
            android:textSize="40sp" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:onClick="onStop"
            android:text="@string/stopbutton"
            android:textSize="40sp" />
    </LinearLayout>

</LinearLayout>